--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ series_note: Masterpieces in Colour
 subjects:
 - !lcc 'ND'
 - !lcsh 'Gérôme, Jean Léon, 1824-1904'
+- GITenberg
 title: Gérôme
 url: http://www.gutenberg.org/ebooks/44340
